move to event creator module benchmark
Signed-off-by: Timo Brandstätter <timo@swirldslabs.com>